# mono

./: README.md
bellman/: Readme.md
bellman/src/: constraint_builder.rs
bellman/src/griffin/: Readme.md  griffin.rs  griffin_circuit.rs  griffin_params.rs  griffin_r1cs.rs
bellman/src/neptune/: neptune_circuit.rs
bellman/src/poseidon/: poseidon_circuit.rs  poseidon_params.rs
bellman/src/rescue/: rescue.rs  rescue_circuit.rs  rescue_r1cs.rs
bounties/: Cargo.toml
bounties/examples/feistel_mimc/: feistel_mimc_easy1.rs  feistel_mimc_easy2.rs  feistel_mimc_hard1.rs  feistel_mimc_hard2.rs  feistel_mimc_medium.rs
bounties/examples/poseidon/: poseidon_easy1.rs  poseidon_easy2.rs  poseidon_hard1.rs  poseidon_hard2.rs  poseidon_medium.rs
bounties/examples/rescue/: rescue_easy1.rs  rescue_easy2.rs  rescue_hard1.rs  rescue_hard2.rs  rescue_medium.rs
bounties/src/: lib.rs
bounties/src/feistel_mimc/: feistel_mimc.rs  feistel_mimc_instances.rs  mod.rs
bounties/src/fields/: field.rs  mod.rs  utils.rs
bounties/src/poseidon/: mod.rs  poseidon.rs  poseidon_instances.rs  poseidon_params.rs
bounties/src/reinforced_concrete/: reinforced_concrete.rs
bounties/src/rescue_prime/: mod.rs  rescue_prime.rs  rescue_prime_instances.rs  rescue_prime_params.rs
plain_impls/: Cargo.toml  Readme.md
plain_impls/benches/: fp4_bls12.rs  fp4_bn256.rs  fp4_st.rs  fp_bls12.rs  fp_bn256.rs  fp_st.rs  hashes.rs  mt_bls12.rs  mt_bn256.rs  mt_hashes.rs  mt_st.rs  plain_mersenne.rs  rc_bls12.rs  rc_bn256.rs  rc_st.rs
plain_impls/examples/: rc_bls12.rs  rc_bn256.rs  rc_st.rs
plain_impls/src/: lib.rs
plain_impls/src/feistel_mimc/: feistel_mimc.rs
plain_impls/src/fields/: const_f64.rs  f64.rs  mod.rs  utils.rs
plain_impls/src/griffin/: griffin.rs  griffin_instances.rs  griffin_params.rs
plain_impls/src/merkle_tree/: merkle_tree_f2.rs
plain_impls/src/monolith_31/: mds_16_generic.rs  mds_16_new.rs  mds_24.rs  mod.rs  monolith_31.rs  monolith_31_params.rs
plain_impls/src/neptune/: neptune.rs  neptune_instances.rs  neptune_params.rs
plain_impls/src/pedersen_hash/: constants.rs  mod.rs  pedersen_hash.rs  test_vectors.rs
plain_impls/src/poseidon/: mod.rs  poseidon.rs  poseidon_instance_bls12.rs  poseidon_instance_st.rs  poseidon_params.rs
plain_impls/src/reinforced_concrete/: reinforced_concrete_instances.rs  reinforced_concrete_params.rs
plain_impls/src/reinforced_concrete_st/: mod.rs  reinforced_concrete_st.rs  reinforced_concrete_st_params.rs
plain_impls/src/rescue/: mod.rs  rescue.rs
plain_impls/src/rescue_prime/: mod.rs  rescue_prime.rs
plain_impls/src/sinsemilla/: constants.rs  mod.rs  sinsemilla.rs  sinsemilla_s.rs  spec.rs
tplonk_impls/: Cargo.toml  Readme.md
tplonk_impls/benches/: fp4_bls12.rs  fp4_bn256.rs  fp4_st.rs  fp_bls12.rs  fp_bn256.rs  fp_st.rs  hashes.rs  rc_bls12.rs  rc_bn256.rs  rc_st.rs
tplonk_impls/examples/: rc_bls12.rs  rc_bn256.rs  rc_st.rs
tplonk_impls/src/: lib.rs
tplonk_impls/src/feistel_mimc/: feistel_mimc_params.rs
tplonk_impls/src/fields/: utils4.rs
tplonk_impls/src/pedersen_hash/: constants.rs  mod.rs  pedersen_hash.rs
tplonk_impls/src/poseidon/: mod.rs  poseidon.rs  poseidon_instance_bn256.rs
tplonk_impls/src/reinforced_concrete/: reinforced_concrete.rs
tplonk_impls/src/reinforced_concrete_st/: reinforced_concrete_st_params.rs
tplonk_impls/src/rescue_prime/: rescue_prime.rs
tplonk_impls/src/sinsemilla/: sinsemilla.rs  spec.rs  util.rs
