[package]
name = "zkhash"
version = "0.1.0"
authors = ["Roman Walch <roman.walch@iaik.tugraz.at>"]
description = "Rust implementaiton of the ReinforcedConcrete permutation"
edition = "2018"

[dependencies]
ff = {package = "ff_ce", version = "0.13", features = ["derive"] }
rand = "0.4" # held back for ff_ce
lazy_static = "1.4"
cfg-if = "1.0"
sha3 = "0.9"
# for sinsemilla:
group = "0.10"
halo2 = { git = "https://github.com/zcash/halo2.git", rev = "d04b532368d05b505e622f8cac4c0693574fbd93" }
pasta_curves = "0.1"
subtle = "2.3"
random = {package = "rand", version = "0.8"}
# for pederson_hash:
byteorder = "1.4"
jubjub = "0.7"
bls12_381 = "0.5"

[dev-dependencies]
criterion = "0.3"
sha2 = "0.9"
blake2 = "0.9" # SIMD currently broke?

[features]
default = []
asm = ["ff/asm_derive", "sha2/asm"]

[[bench]]
name = "rc_bls12"
harness = false

[[bench]]
name = "rc_bn256"
harness = false

[[bench]]
name = "rc_st"
harness = false

[[bench]]
name = "fp_bls12"
harness = false

[[bench]]
name = "fp_bn256"
harness = false

[[bench]]
name = "fp_st"
harness = false

[[bench]]
name = "fp4_bls12"
harness = false

[[bench]]
name = "fp4_bn256"
harness = false

[[bench]]
name = "fp4_st"
harness = false

[[bench]]
name = "hashes"
harness = false

[[example]]
name = "rc_bls12"
path = "examples/rc_bls12.rs"

[[example]]
name = "rc_bn256"
path = "examples/rc_bn256.rs"

[[example]]
name = "rc_st"
path = "examples/rc_st.rs"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

[profile.bench]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
